exports[`test the round back button matches the snapshot 1`] = `
<button
  aria-label="Back"
  className="elchIq">
  ButtonValue
</button>
`;

exports[`test the round back button with button type given matches the snapshot 1`] = `
<button
  aria-label="Back"
  className="elchIq"
  type="button">
  ButtonValue
</button>
`;
